# legall.tech

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml
analytics/: dbt_project.yml
docs/: index.md
scripts/: docs.py  zips-docs.sh
