[tool.poetry]
name = "LeGall"
version = "0.1.0"
description = "My personal website"
authors = ["JeremyLG <jeremy.le-gall@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.3.1"
Jinja2 = "^2.11.2"
typer = "^0.3.2"
mkdocs-material = "^6.1.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
